Revert "fix(nav): correct mobile menu vertical alignment"
This reverts commit 4f6737d4f56c52a8c1b8288ed9b9343fa25da50e.

--- a/src/mittatelier.css
+++ b/src/mittatelier.css
@@ -277,14 +277,11 @@ div.desc { /*beskrivelsen under bilder i galleriet*/
         justify-content: space-between;
         align-items: center;
         padding: 0 10px;
-        height: 80px;
     }
 
     header img {
         max-width: 50%;
         margin-left: 0;
-        height: auto;
-        max-height: 70px;
     }
 
     #navwrapper {
@@ -292,7 +289,7 @@ div.desc { /*beskrivelsen under bilder i galleriet*/
         position: absolute;
         top: 0;
         right: 0;
-        height: 80px;
+        height: 100%;
         width: auto;
         background-color: transparent;
         border-bottom: none;
@@ -316,7 +313,7 @@ div.desc { /*beskrivelsen under bilder i galleriet*/
     #meny ul {
         display: none;
         position: absolute;
-        top: 80px;
+        top: 100%;
         right: 0;
         width: 50vw;
         background-color: white;
